# dataUtils

./: folderBatch.py  labelmap.json  pascal2coco.py  pyproject.toml  resizeData.py  splitData.py
