[tool.poetry]
name = "utils"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
argparse = "^1.4.0"
tqdm = "^4.64.0"
lxml = "^4.8.0"
opencv-python = "^4.5.5"
xmltodict = "^0.12.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
